# PushAndRotate

./: CMakeLists.txt  README.md  mass_execution.py  tool.py
Algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h  decomposition.cpp  logger.h  main.cpp  map.cpp  map.h  moves.cpp  node.h  post-processing.cpp  priorities.cpp
Generators/: XML_parser.py  converter.py  mass_converter.py  tool.py
Tests/: Test1.xml  Test10.xml  Test12.xml  Test2.xml  Test3.xml  Test5.xml  Test6.xml  Test7.xml  Test8.xml  Test9.xml
Tests/BasicBenchmarks/: 1.xml  2.xml  3.xml  Basic_benchmark_11.xml  Basic_benchmark_4.xml
Tests/BasicBenchmarks-solved/: 1.xml  2.xml  3.xml  Basic_benchmark_1.xml  Basic_benchmark_10.xml  Basic_benchmark_10_pr.xml  Basic_benchmark_11.xml  Basic_benchmark_11_pr.xml  Basic_benchmark_12.xml  Basic_benchmark_12_pr.xml  Basic_benchmark_1_pr.xml  Basic_benchmark_2.xml  Basic_benchmark_2_pr.xml  Basic_benchmark_3.xml  Basic_benchmark_3_pr.xml  Basic_benchmark_4.xml  Basic_benchmark_4_pr.xml  Basic_benchmark_5.xml  Basic_benchmark_5_pr.xml  Basic_benchmark_6.xml  Basic_benchmark_6_pr.xml  Basic_benchmark_7.xml  Basic_benchmark_7_pr.xml  Basic_benchmark_8.xml  Basic_benchmark_8_pr.xml  Basic_benchmark_9.xml  Basic_benchmark_9_pr.xml
Tests/EasyBenchmarks/: EasyBenchmark_1.xml  EasyBenchmark_2.xml  (+3 more)
Tests/EasyBenchmarks-solved/: EasyBenchmark_1.xml  EasyBenchmark_1_pr.xml  EasyBenchmark_2.xml  EasyBenchmark_2_pr.xml  EasyBenchmark_3.xml  EasyBenchmark_3_pr.xml  EasyBenchmark_4.xml  EasyBenchmark_4_pr.xml  EasyBenchmark_5.xml  EasyBenchmark_5_pr.xml
